sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:12: error: '(' expected but identifier found.
      for j ( <- 0 to n){
          ^AlgInsertionSort:15: error: illegal start of simple expression
    }
    ^